[package]
name = "pvz-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"] }

tracing = "*"
tracing-subscriber = { version = "*", features = ["local-time", "env-filter"] }
anyhow = "*"
#ui
iced = { version = "*", features = ["advanced"] }

[[bin]]
name = "iced_ui"
path = "src/iced_ui.rs"

[[bin]]
name = "pvz_helper_ui"
path = "src/pvz_helper_ui.rs"

[profile.release]
lto = "thin"
opt-level = 'z'
codegen-units = 1
strip = "none"
panic = "abort"