[package]
name = "pvz-helper"
version = "0.1.0"
edition = "2021"

[features]
default = ["qt"]
qt = []

[dependencies]
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"] }

tracing = "*"
tracing-subscriber = { version = "*", features = ["local-time", "env-filter"] }
anyhow = "*"
#ui
iced = { version = "*", features = ["advanced"] }
# qt
cxx = "*"
cxx-qt = "*"
cxx-qt-lib = "*"

[build-dependencies]
cxx-qt-build = { version = "*", features = ["link_qt_object_files"] }
cxx-qt-lib-headers = "*"

[[bin]]
name = "qt_ui"
path = "src/qt_ui.rs"


[[bin]]
name = "iced_ui"
path = "src/iced_ui.rs"

[[bin]]
name = "pvz_helper_ui"
path = "src/pvz_helper_ui.rs"

[profile.release]
lto = "thin"
opt-level = 'z'
codegen-units = 1
strip = "none"
panic = "abort"